log/build_2020-08-07_14-21-39/main/stdout_stderr.log
Scanning dependencies of target main
[ 33%] Building CXX object CMakeFiles/main.dir/src/game.cpp.o
In file included from /Users/mukuyo/Desktop/RI-AI/src/main/src/game.cpp:7:
/Users/mukuyo/Desktop/RI-AI/src/main/src/goalie.hpp:4:7: error: redefinition of 'Goalie'
class Goalie : public rclcpp::Node{
      ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/game.hpp:17:10: note: '/Users/mukuyo/Desktop/RI-AI/src/main/src/goalie.hpp' included multiple times, additional include site here
#include "goalie.hpp"
         ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/game.cpp:7:10: note: '/Users/mukuyo/Desktop/RI-AI/src/main/src/goalie.hpp' included multiple times, additional include site here
#include "goalie.hpp"
         ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/goalie.hpp:4:7: note: unguarded header; consider using #ifdef guards or #pragma once
class Goalie : public rclcpp::Node{
      ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/game.cpp:32:16: warning: unused variable 'field_width' [-Wunused-variable]
         float field_width = geometry_message->field_width;
               ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/game.cpp:49:13: error: call to non-static member function without an object argument
    Goalie::main(ball,robot,goal,command);
    ~~~~~~~~^~~~
1 warning and 2 errors generated.
make[2]: *** [CMakeFiles/main.dir/src/game.cpp.o] Error 1
make[1]: *** [CMakeFiles/main.dir/all] Error 2
make: *** [all] Error 2
